--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,41 +39,41 @@ div
 	position: absolute;
 	height: 75px;
 	width: 50px;
-	background: url("HulksheetSNES_2.png");
+	background: url("HulksheetSNES_2BW.png");
 	background-position: -1023px -149px;
 	z-index: 15;
 }
 
 .playerMove
 {
-	background: url("HulksheetSNES_2.png");
+	background: url("HulksheetSNES_2BW.png");
 	background-position: -1023px -149px;
 }
 .playerMove2
 {
-	background: url("HulksheetSNES_2.png");
+	background: url("HulksheetSNES_2BW.png");
 	background-position: -1073px -149px;
 }
 .playerMove3
 {
-	background: url("HulksheetSNES_2.png");
+	background: url("HulksheetSNES_2BW.png");
 	background-position: -1123px -149px;
 }
 .playerMove4
 {
-	background: url("HulksheetSNES_2.png");
+	background: url("HulksheetSNES_2BW.png");
 	background-position: -1173px -149px;
 }
 
 .playerJumpUp
 {
-	background: url("HulksheetSNES_2.png");
+	background: url("HulksheetSNES_2BW.png");
 	background-position: -1023px -307px;
 }
 
 .playerJumpDown
 {
-	background: url("HulksheetSNES_2.png");
+	background: url("HulksheetSNES_2BW.png");
 	background-position: -1073px -307px;
 }
 
@@ -100,7 +100,7 @@ div
 }
 .playerSmash
 {
-	background: url("HulksheetSNES_2.png");
+	background: url("HulksheetSNES_2BW.png");
 	background-position: -1023px -74px;
 }
 .ground
